docs/getting-started/istio-canary/virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc-canary
spec:
  gateways:
  - rollouts-demo-gateway-canary
  hosts:
  - rollouts-demo-canary.local
  http:
  - name: primary
    route:
    - destination:
        host: rollouts-demo-stable
      weight: 100
    - destination:
        host: rollouts-demo-canary
      weight: 0
